@@ -3,6 +3,7 @@ v1.14.4-snapshot
 Enhancements:
 - #7143 Add ability to stop synergy on the login screen
 - #7157 | #7160 Synergy business accepts only business licenses
+- #7166 Replace annoying language notifications with warnings in logs
 
 Bug fixes:
 - #7144 Fix double lines when pasting text from Linux to Windows
